Adds tests, cleans up sample.

--- a/source/Sample/Views/Shared/_Layout.cshtml
+++ b/source/Sample/Views/Shared/_Layout.cshtml
@@ -5,13 +5,16 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Sample - @ViewBag.Title</title>
-    <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/screen.css")"/>
+
+    <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/flash-messages.css")" />
+    <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/screen.css")" />
+
 </head>
 <body>
     <div class="container">
         @Html.RenderFlash()
         <div class="body-content">
-            @RenderBody()    
+            @RenderBody()
         </div>
     </div>
 </body>
