--- a/source/Sample/Content/screen.css
+++ b/source/Sample/Content/screen.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color: #008080;
+    background-color: #b0b7c2;
     color: #303030;
     font-family: Arial, sans-serif;
 }
